# shops-parser-backend

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: tests.yml
docker/: .env  .env.example  docker-compose.yml
docker/backend/: Dockerfile  Pipfile  entrypoint.sh
docker/nginx/: default.conf
docs/en/: docker.md  enviroment.md  first_start.md  swagger.md  tests.md  virtualenv.md
docs/ru/: README.md  docker.md  enviroment.md  first_start.md  swagger.md  tests.md  virtualenv.md
src/: pyproject.toml  requirements.txt
src/categories/: admin.py  models.py  serializers.py  urls.py  views.py
src/categories/migrations/: 0001_initial.py
src/core/: asgi.py  celery.py  exceptions.py  settings.py  urls.py  utils.py  wsgi.py
src/home/: admin.py  managers.py  models.py  tests.py  views.py
src/home/migrations/: 0001_initial.py  0002_create_superuser.py  0003_alter_homemodel_id.py
src/home/services/: home_service.py
src/home/static/home/css/: base.css  base.css.map  base.scss  fonts.css  fonts.css.map  fonts.scss  home-page.css  home-page.css.map  home-page.scss
src/home/templates/home/: home_page.html
src/products/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/products/migrations/: 0001_initial.py
src/providers/: admin.py  constants.py  models.py  serializers.py  tests.py  urls.py  views.py
src/providers/migrations/: 0001_initial.py  0002_auto_20210411_0827.py  0002_auto_20211003_0939.py
src/templates/: base.html
src/twenty_first_century/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
src/twenty_first_century/migrations/: 0001_initial.py
src/twenty_first_century/services/: __init__.py  base_service.py  handler_products_service.py  parsing_service.py
