[tool.poetry]
name = "shops-parser-backend"
version = "0.1.0"
description = ""
authors = ["vadim.koziachiy <vadim.koziachiy@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Django = "*"
django-environ = "*"
django-rest-auth = {extras = ["with_social"], version = "*"}
djangorestframework = "*"
django-celery-results = "*"
psycopg2 = "*"
celery = "*"
python-scrapyd-api = "*"
drf-spectacular = "^0.20.0"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]
uWSGI = "==2.0.19.1"
black = "==21.9b0"
reorder-python-imports = "*"
pylint = "*"
pycln = {git = "https://github.com/hadialqattan/pycln"}
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
